# exoprior

./: pyproject.toml  requirements.txt
data/raw/: ps_transiting_default.parquet  ps_transiting_default_query.json
docs/: data_dictionary.md  feature_engineering.md  limitations.md  problem_statement.md  scoring_model.md
src/exoprior.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/exoprior/features/: engineer.py
src/exoprior/ingest/: schema.py  tap_client.py
tests/: conftest.py  test_features.py  test_ingest.py
